<resources>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="notification_badge">Notification Badge</string>
    <string name="title_activity_notification_badge">Notification Badge</string>
    <string name="increase">Increase</string>
    <string name="clear">Clear</string>
    <string name="load_image_from_url">Load Image From URL</string>
    <string name="title_activity_load_image">Load Image From URL</string>
    <string name="title_activity_youtube">Youtube</string>
    <string name="youtube">Youtube</string>
    <string name="title_activity_camera">Camera</string>
    <string name="open_camera">Open Camera</string>
    <string name="capture_image">Capture Image</string>
    <string name="particle_text_view">Particle Text View</string>
    <string name="title_activity_particle_text_view">ParticleTextViewActivity</string>
</resources>
