<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.amrit.demo.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_notificationBadge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="notificationBadge"
            android:text="@string/notification_badge" />

        <Button
            android:id="@+id/bt_loadImageFromURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loadImage"
            android:text="@string/load_image_from_url" />

        <Button
            android:id="@+id/bt_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="youtube"
            android:text="@string/youtube" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="captureImage"
            android:text="@string/capture_image" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
