<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.amrit.demo.notificationBadge.NotificationBadgeActivity"
    tools:showIn="@layout/activity_notification_badge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btIncrease"
            android:onClick="clearCounter"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btIncrease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginTop="10dp"
            android:onClick="increaseCounter"
            android:text="@string/increase" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.nex3z.notificationbadge.NotificationBadge
            android:id="@+id/notificationBadge"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignTop="@id/imageView"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="-8dp"
            android:layout_toEndOf="@+id/imageView"
            app:nbBackground="@drawable/badge_bg_with_shadow"
            app:nbMaxTextLength="2">

        </com.nex3z.notificationbadge.NotificationBadge>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
